--- a/Ejercicio 7.html
+++ b/Ejercicio 7.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="Ejercicio 7.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 7</title>
 </head>
+
 <body>
-    
+    <h1>Ejemplo de encabezado h1</h1>
+
+    <p> Este es un ejemplo de párrafo en negritas.Este es un ejemplo de párrafo en negritas.
+            Este es un ejemplo de párrafo en negritas. Este es un ejemplo de párrafo en negritas.
+            Este es un ejemplo de párrafo en negritas. Este es un ejemplo de párrafo en negritas.
+            Este es un ejemplo de párrafo en negritas. </p>
+
+    <h2> Ejemplo de encabezado h2</h2>
+
+    <p> Este es un ejemplo de párrafo en itálica. Este es un ejemplo de párrafo en itálica.
+            Este es un ejemplo de párrafo en itálica. Este es un ejemplo de párrafo en itálica.
+            Este es un ejemplo de párrafo en itálica. Este es un ejemplo de párrafo en itálica.
+            Este es un ejemplo de párrafo en itálica. </p>
+
 </body>
+
 </html>
