--- a/Ejercicio 9.html
+++ b/Ejercicio 9.html
@@ -6,18 +6,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 9</title>
 </head>
 
 <body>
     <div class="deportes">
-
+        
         <ul>
             <h2>Deportes</h2>
-            <ul id="ul1" type="square">
+
                 <li>Tennis</li>
                 <li>Futbol</li>
-            </ul>
 
         </ul>
 
