--- a/Ejercicio 10.html
+++ b/Ejercicio 10.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+      <link rel="stylesheet" href="Ejercicio 10.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Ejercicio de selectores</title>
   </head>
@@ -8,7 +9,6 @@
   <body>
     <h1 id="titulo">Lorem ipsum dolor sit amet</h1>
 
-    
     <p>
       Nulla pretium. Sed tempus nunc vitae neque.
       <strong>Suspendisse gravida</strong>, metus a scelerisque sollicitudin,
@@ -28,9 +28,7 @@
     </p>
 
     <table summary="Descripción de la tabla y su contenido">
-      <caption>
-        Título de la tabla
-      </caption>
+
       <thead>
         <tr>
           <th scope="col"></th>
