Modificación ej 13-17 Agregado de Current en paginas

--- a/Ejercicio 15.html
+++ b/Ejercicio 15.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" aria-current="page" href="http://127.0.0.1:5501/Ejercicio%2013%20y%2014.html">Tabla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2015.html">Regístrate</a>
+                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2015.html">Regístrate (Current)</a>
                     </li>
                 </ul>
             </div>
