--- a/Ejercicio 13 y 14.html
+++ b/Ejercicio 13 y 14.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2017.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="http://127.0.0.1:5501/Ejercicio%2013%20y%2014.html">Tabla</a>
+                        <a class="nav-link" aria-current="page" href="http://127.0.0.1:5501/Ejercicio%2013%20y%2014.html">Tabla (Current)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2015.html">Regístrate</a>
