--- a/Ejercicio 17.html
+++ b/Ejercicio 17.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2017.html">Home</a>
+                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2017.html">Home (Current)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page"
