--- a/Ejercicio 17.html
+++ b/Ejercicio 17.html
@@ -12,13 +12,13 @@
     <title>Ej 15,16 y 17</title>
 </head>
 
-<body>
+<body title="Somos Egg">
 
     <nav class="navbar navbar-expand-lg navbar-light">
 
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="http://127.0.0.1:5501/Ejercicio%2017.html">Navbar</a>
+            <a class="navbar-brand" title="Home" href="http://127.0.0.1:5501/Ejercicio%2017.html">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,14 +27,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2017.html">Home (Current)</a>
+                        <a class="nav-link" title="Home" href="http://127.0.0.1:5501/Ejercicio%2017.html">Home (Current)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page"
+                        <a class="nav-link" aria-current="page" title="Tabla"
                             href="http://127.0.0.1:5501/Ejercicio%2013%20y%2014.html">Tabla</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5501/Ejercicio%2015.html">Regístrate</a>
+                        <a class="nav-link" title="Regístrate" href="http://127.0.0.1:5501/Ejercicio%2015.html">Regístrate</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,9 @@
         </div>
     </nav>
 
-    <img src="https://moodle.eggeducacion.app/pluginfile.php/1/theme_remui/section_html/995222360/Header-Moodle_4.jpg" title="Somos Egg" class="img-fluid">
+    <!-- <img src="https://moodle.eggeducacion.app/pluginfile.php/1/theme_remui/section_html/995222360/Header-Moodle_4.jpg" title="Somos Egg" class="img-fluid"> -->
+
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
